--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "array-move": "^2.2.2",
     "emotion-theming": "^10.0.27",
     "polished": "^3.6.3",
     "prop-types": "^15.7.2",
@@ -16,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-id-swiper": "^3.0.0",
     "react-scripts": "3.4.1",
+    "react-sortable-hoc": "^1.11.0",
     "react-youtube": "^7.11.2",
     "swiper": "^5.4.1"
   },
