--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "array-move": "^2.2.2",
+    "cross-fetch": "^3.0.4",
     "emotion-theming": "^10.0.27",
     "polished": "^3.6.3",
     "prop-types": "^15.7.2",
