--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-fetch": "^3.0.4",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.11.0",
+    "gh-pages": "^3.0.0",
     "polished": "^3.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -33,7 +34,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "postdeploy": "rm -rf build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
