Change sortable library; starting animations

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "array-move": "^2.2.2",
     "cross-fetch": "^3.0.4",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.11.0",
@@ -22,7 +21,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-sortable-hoc": "^1.11.0",
+    "react-sortablejs": "^2.0.11",
     "react-youtube": "^7.11.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
