Finish firts version! :rocket:

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Homey Training",
-  "name": "Homey Training",
+  "short_name": "workout@home",
+  "name": "workout@home",
   "icons": [
     {
       "src": "favicon.ico",
