Updates manifest and package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "workout-home-app",
+  "name": "workout-at-home",
+  "homepage": "http://thiagosf.github.io/workout-at-home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
