--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://thiagosf.github.io/workout-at-home/",
   "display": "fullscreen",
   "theme_color": "#f06969",
   "background_color": "#f06969"
