--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": "https://thiagosf.github.io/workout-at-home/",
   "display": "standalone",
-  "theme_color": "#f06969",
-  "background_color": "#f06969"
+  "theme_color": "#333333",
+  "background_color": "#333333"
 }
