--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-youtube": "^7.11.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "swiper": "^5.4.1"
+    "swiper": "^5.4.1",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
