--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": "https://thiagosf.github.io/workout-at-home/",
-  "display": "fullscreen",
-  "theme_color": "#f06969",
-  "background_color": "#f06969"
+  "display": "standalone",
+  "theme_color": "#333333",
+  "background_color": "#333333"
 }
