--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
-    "predeploy": "yarn build",
+    "build-storybook": "build-storybook -c .storybook -o build/storybook",
+    "predeploy": "yarn build && yarn build-storybook",
     "postdeploy": "rm -rf build",
     "deploy": "gh-pages -d build"
   },
